# tinyram

./: .ghci  .gitignore  .hlint.yaml  README.md  flake.nix  lint.sh  load-before-store.txt  notes  stack.yaml  tinyram.cabal
app/: Main.hs
doc/test-plan/: test-plan.md
examples/: addTest.s  addTestCase.s  addTestNegative.s  andTest.s  andTestNegative.s  answerRegisterTest.s  answerTestCase.s  breakWKconstraint.s  breakWKconstraintCase.s  cjmpTestCase.s  cmpaEqualTest.s  cmpaGreaterTestCase.s  cmpaLessTest.s  cmpaNegTest.s  cmpaeEqualTestCase.s  cmpaeGreaterTestCase.s  cmpaeLessTest.s  cmpaeNegTest.s  cmpaeTest.s  cmpeEqualTestCase.s  cmpeGreaterTestCase.s  cmpeLessTestCase.s  cmpeNegTest.s  cmpeTest.s  cmpgEqualTest.s  cmpgGreaterTest.s  cmpgLessTestCase.s  cmpgNegTest.s  cmpgeEqualTestCase.s  cmpgeGreaterTestCase.s  cmpgeLessTestCase.s  cmpgeNegTestCase.s  cmpgeTest.s  cnjmpTestCase.s  input1.txt  jmpTestCase.s  jmpTestExample.s  jmpTestExampleCase.s  jmpTestExampleNonTermCase.s  max.s  (+30 more)
src/TinyRAM/: Bytes.hs  Cast.hs  DecodeInstruction.hs  Die.hs  Disassembler.hs  EncodeInstruction.hs  EntryPoint.hs  ExecuteInstruction.hs  ExecuteProgram.hs  Instructions.hs  MachineState.hs  Operations.hs  Params.hs  Parser.hs  Prelude.hs  Run.hs  SignedArithmetic.hs
src/TinyRAM/Types/: Address.hs  Command.hs  Flag.hs  HasMachineState.hs  HasParams.hs  ImmediateOrRegister.hs  InputTape.hs  InputTapePath.hs  Instruction.hs  MachineState.hs  MaxSteps.hs  MemoryValues.hs  Opcode.hs  Operations.hs  Params.hs  Program.hs  ProgramCounter.hs  ProgramFilePath.hs  ProgramMemoryValues.hs  Register.hs  RegisterCount.hs  RegisterValues.hs  Sign.hs  SignedInt.hs  TinyRAMT.hs  UnsignedInt.hs  Word.hs  WordSize.hs
test/: Spec.hs
test/TinyRAM/Spec/: AssemblerSpec.hs  BytesSpec.hs  CoqRun.hs  CoqTinyRAMSpec.hs  DecodeInstructionSpec.hs  EncodeInstruction.hs  EndToEndSpec (copy).hs  EndToEndSpec.hs  ExecuteInstructionSpec.hs  Gen.hs  ParserSpec.hs  Prelude.hs  RunSpec.hs  SignedArithmeticSpec.hs  jmpTestExample.s
