cabal-version:      2.4
name:               tinyram
version:            0.1.0.0
license: NONE
license-files: LICENSE
author:        Ardana Labs
maintainer:    morgan.thomas@platonic.systems

data-files: examples/*.s

library
  exposed-modules:
    TinyRAM.Bytes
    TinyRAM.DecodeInstruction
    TinyRAM.EntryPoint
    TinyRAM.EncodeInstruction
    TinyRAM.ExecuteInstruction
    TinyRAM.ExecuteProgram
    TinyRAM.Instructions
    TinyRAM.MachineState
    TinyRAM.Operations
    TinyRAM.Params
    TinyRAM.Parser
    TinyRAM.Prelude
    TinyRAM.Run
    TinyRAM.SignedArithmetic
    TinyRAM.Types.Address
    TinyRAM.Types.Command
    TinyRAM.Types.Flag
    TinyRAM.Types.HasMachineState
    TinyRAM.Types.HasParams
    TinyRAM.Types.ImmediateOrRegister
    TinyRAM.Types.InputTape
    TinyRAM.Types.InputTapePath
    TinyRAM.Types.Instruction
    TinyRAM.Types.MachineState
    TinyRAM.Types.MaxSteps
    TinyRAM.Types.MemoryValues
    TinyRAM.Types.Opcode
    TinyRAM.Types.Operations
    TinyRAM.Types.Params
    TinyRAM.Types.Program
    TinyRAM.Types.ProgramCounter
    TinyRAM.Types.ProgramFilePath
    TinyRAM.Types.RegisterCount
    TinyRAM.Types.Register
    TinyRAM.Types.RegisterValues
    TinyRAM.Types.Sign
    TinyRAM.Types.SignedInt
    TinyRAM.Types.TinyRAMT
    TinyRAM.Types.UnsignedInt
    TinyRAM.Types.Word
    TinyRAM.Types.WordSize

  build-depends:
    base >= 4.9 && < 5,
    aeson,
    bytestring,
    containers,
    either,
    extra,
    generic-lens,
    ghc-prim,
    hedgehog -any,
    lens,
    mtl,
    optparse-applicative,
    parsec,
    text -any,
    transformers,
    validity,
    validity-bytestring

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists
          -threaded -rtsopts -with-rtsopts=-N


test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs

  other-modules:
    TinyRAM.Spec.AssemblerSpec
    TinyRAM.Spec.BytesSpec
    TinyRAM.Spec.DecodeInstructionSpec
    TinyRAM.Spec.EncodeInstruction
    TinyRAM.Spec.EndToEndSpec
    TinyRAM.Spec.ExecuteInstructionSpec
    TinyRAM.Spec.Gen
    TinyRAM.Spec.ParserSpec
    TinyRAM.Spec.Prelude
    TinyRAM.Spec.RunSpec
    TinyRAM.Spec.SignedArithmeticSpec

  build-tools:
    sydtest-discover

  build-depends:
    base >= 4.9 && < 5,
    aeson,
    bytestring,
    containers,
    either,
    extra,
    generic-lens,
    genvalidity,
    genvalidity-bytestring,
    genvalidity-sydtest,
    genvalidity-sydtest-aeson,
    ghc-prim,
    hedgehog -any,
    lens,
    mtl,
    optparse-applicative,
    parsec,
    QuickCheck,
    sydtest,
    sydtest-discover,
    text -any,
    transformers,
    validity,

    tinyram

  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists
          -threaded -rtsopts -with-rtsopts=-N


executable tinyram
  main-is:
    Main.hs

  build-depends:
    tinyram

  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists

