cabal-version:      2.4
name:               tinyram
version:            0.1.0.0
license: NONE
license-files: LICENSE
author:        Orbis Labs
maintainer:    morgan.thomas@platonic.systems

data-files: examples/*.s

common globals
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Werror
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
    -threaded
    -rtsopts
    -with-rtsopts=-N
  default-extensions:
    DerivingStrategies

library
  import: globals
  exposed-modules:
    TinyRAM.Bytes
    TinyRAM.Cast
    TinyRAM.DecodeInstruction
    TinyRAM.Die
    TinyRAM.EntryPoint
    TinyRAM.EncodeInstruction
    TinyRAM.ExecuteInstruction
    TinyRAM.ExecuteProgram
    TinyRAM.Instructions
    TinyRAM.MachineState
    TinyRAM.Params
    TinyRAM.Prelude
    TinyRAM.Run
    TinyRAM.SignedArithmetic
    TinyRAM.Types.Address
    TinyRAM.Types.Command
    TinyRAM.Types.Flag
    TinyRAM.Types.HasMachineState
    TinyRAM.Types.HasParams
    TinyRAM.Types.ImmediateOrRegister
    TinyRAM.Types.InputTape
    TinyRAM.Types.InputTapePath
    TinyRAM.Types.Instruction
    TinyRAM.Types.MachineState
    TinyRAM.Types.MaxSteps
    TinyRAM.Types.MemoryValues
    TinyRAM.Types.Params
    TinyRAM.Types.Program
    TinyRAM.Types.ProgramCounter
    TinyRAM.Types.ProgramFilePath
    TinyRAM.Types.ProgramMemoryValues
    TinyRAM.Types.RegisterCount
    TinyRAM.Types.Register
    TinyRAM.Types.RegisterValues
    TinyRAM.Types.Sign
    TinyRAM.Types.SignedInt
    TinyRAM.Types.TinyRAMT
    TinyRAM.Types.UnsignedInt
    TinyRAM.Types.Word
    TinyRAM.Types.WordSize

  build-depends:
    base >= 4.9 && < 5,
    bytestring,
    containers,
    generic-lens,
    ghc-prim,
    lens,
    mtl,
    optparse-applicative,
    text -any,
    transformers,
    validity,
    validity-bytestring

  hs-source-dirs: src


test-suite spec
  import: globals
  type: exitcode-stdio-1.0
  main-is: Spec.hs

  other-modules:
    TinyRAM.Spec.BytesSpec
    TinyRAM.Spec.CoqRun
    TinyRAM.Spec.CoqTinyRAMSpec
    TinyRAM.Spec.DecodeInstructionSpec
    TinyRAM.Spec.ExecuteInstructionSpec
    TinyRAM.Spec.Gen
    TinyRAM.Spec.Prelude
    TinyRAM.Spec.RunSpec
    TinyRAM.Spec.SignedArithmeticSpec
    TinyRAM.Spec.EndToEndSpec

  build-tools:
    sydtest-discover

  build-depends:
    base >= 4.9 && < 5,
    bytestring,
    containers,
    either,
    extra,
    genvalidity,
    genvalidity-bytestring,
    genvalidity-sydtest,
    ghc-prim,
    lens,
    process,
    QuickCheck,
    random,
    sydtest,
    text -any,
    transformers,

    tinyram

  hs-source-dirs: test

executable tinyram
  import: globals
  main-is:
    Main.hs

  build-depends:
    tinyram

  hs-source-dirs: app
